--- a/style.css
+++ b/style.css
@@ -4,11 +4,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+body{
+  margin: 10px;
+}
 
 .ogg{
-  display: inline;
-  border: 1px solid black;
+  display: inline-block;
+  padding: 5px;
   position: relative;
+
 }
 .red{
   position: absolute;
@@ -22,12 +26,18 @@
   right: 0;
   background-color: green;
 }
-span img{
+
+.like{
   height: 30px;
   width:30px;
   position: absolute;
-  z-index: 20;
-  left: 50%;
-  bottom: 0;
 
+  left: 50%;
+  bottom: 15px;
+  /*display: none;*/
+  z-index: 10;
+  visibility: hidden;
+}
+.like:hover{
+  visibility: visible;
 }
